--- a/functions/package.json
+++ b/functions/package.json
@@ -12,6 +12,7 @@
     "node": "8"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.3.0"
   },
